--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=hampers_db
+DB_PASSWORD=zmwxCwjlXSpvgWPXOjGAJrqgrJXQtaSA
+DB_NAME=railway
 JWT_SECRET=rahasia_super
