--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-DB_HOST=mysql.railway.internal
-DB_PORT=3306
+DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=zmwxCwjlXSpvgWPXOjGAJrqgrJXQtaSA
-DB_NAME=railway
+DB_PASSWORD=
+DB_NAME=hampers_db
 JWT_SECRET=rahasia_super
