--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=hampers_db
+DB_HOST=mysql.railway.internal
+DB_USER=railway
+DB_PASSWORD=QZrqGpPaRnrNyoiSxrYGHfPaWfzuZCFQ
+DB_NAME=railway
 JWT_SECRET=rahasia_super
+PORT=3306
