--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-DB_HOST=mysql.railway.internal
-DB_USER=railway
-DB_PASSWORD=QZrqGpPaRnrNyoiSxrYGHfPaWfzuZCFQ
-DB_NAME=railway
-JWT_SECRET=rahasia_super
-PORT=3306
+# Credential root Railway (untuk inisialisasi)
+DB_HOST=switchyard.proxy.rlwy.net
+DB_PORT=20375
+DB_ROOT_USER=root
+DB_ROOT_PASSWORD=QZrqGpPaRnrNyoiSxrYGHfPaWfzuZCFQ
+
+# Credential aplikasi
+DB_USER=appuser
+DB_PASSWORD=AppUser123!
+DB_NAME=hampersdb
