--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ DB_ROOT_PASSWORD=QZrqGpPaRnrNyoiSxrYGHfPaWfzuZCFQ
 DB_USER=appuser
 DB_PASSWORD=AppUser123!
 DB_NAME=hampersdb
+JWT_SECRET=rahasia_super
