--- a/.env
+++ b/.env
@@ -1,11 +1,6 @@
-# Credential root Railway (untuk inisialisasi)
 DB_HOST=switchyard.proxy.rlwy.net
 DB_PORT=20375
-DB_ROOT_USER=root
-DB_ROOT_PASSWORD=QZrqGpPaRnrNyoiSxrYGHfPaWfzuZCFQ
-
-# Credential aplikasi
 DB_USER=appuser
-DB_PASSWORD=AppUser123!
-DB_NAME=hampersdb
+DB_PASSWORD=QZrqGpPaRnrNyoiSxrYGHfPaWfzuZCFQ
+DB_NAME=railway
 JWT_SECRET=rahasia_super
